--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,15 +4,16 @@
 
 .main {
 	position: relative;
-	margin: 60px auto 0;
+	margin: 2.5% auto 0;
 	width: 95%;
 	min-width: 320px;
 	max-width: 960px;
 }
 .primary {
-	margin-right: 32%;
+	// margin-right: 32%;
 }
 .sub {
+	height: 800px;
 	margin-bottom: 6%;
 	padding: 0 20px 12px;
 	background: #fff;
