--- a/scss/partials/wpcom-header.scss
+++ b/scss/partials/wpcom-header.scss
@@ -64,14 +64,14 @@
 		ul { // Dropdown menu
 			display: none;
 			position: absolute;
-			top: 44px;
+			top: 55px;
 			left: 0;
 			width: auto;
 			min-width: 220px;
 			line-height: 46px;
 			background: #fff;
 			background: rgba(255,255,255,0.99);
-			z-index: 1000000;
+			z-index: 9999;
 			@include box-shadow(
 				0 0 2px rgba(0, 0, 0, 0.15),
 				0 3px 8px rgba(0, 0, 0, 0.1)
@@ -160,6 +160,73 @@
 			color: #fff;
 			cursor: default;
 			@include box-shadow(inset 0 -1px 0 rgba(0, 86, 132, 0.5));
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	// A bit sloppy and could be refactored a bit.
+	.wpcom--header {
+		position: fixed;
+		z-index: 10000;
+	}
+	.wpcom--header--title {
+		margin-left: 6px;
+	}
+	.wpcom--header--nav {
+		background: #fafafa;
+		border-left: 1px solid #e7e7e7;
+		@include box-shadow(
+			inset 0 2px 2px -2px rgba(0, 0, 0, 0.15),
+			inset 0 11px 8px -8px rgba(0, 0, 0, 0.1)
+		);
+
+		a {
+			display: block;
+			color: #278dbc;
+			line-height: 44px;
+			border-bottom: 1px solid #f0f0f0;
+			overflow: visible;
+
+			&:hover {
+				color: #78c8e6;
+			}
+		}
+		.current {
+			a {
+				@include box-shadow(none);
+			}
+		}
+		li {
+			> ul {
+				position: static;
+				display: block;
+				width: 100%;
+				border-left: 5px solid #e7e7e7;
+				background: transparent;
+				@include box-shadow(none);
+
+				a {
+					border-bottom: 1px solid #f0f0f0;
+				}
+				&:after {
+					display: none;
+				}
+				ul {
+					border-left: 5px solid #e7e7e7;
+				}
+				li {
+					&:hover {
+						a {
+							color: #78c8e6;
+							background: transparent;
+						}
+					}
+				}
+			}
+		}
+		&:after {
+			display: none;
 		}
 	}
 }
