--- a/css/style.css
+++ b/css/style.css
@@ -697,6 +697,120 @@ hr {
   margin: 1em 0;
   padding: 0; }
 
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"], .button-primary,
+.button-secondary {
+  padding: 0.53846em 1.15385em;
+  font-size: 0.8125em;
+  font-weight: 400;
+  line-height: 1;
+  color: #dcedf5;
+  text-shadow: 0 -1px 0 rgba(0, 116, 162, 0.8);
+  border: none;
+  background: #54b2de;
+  cursor: pointer;
+  outline: none;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  background-color: #0074a2;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#278dbc), to(#0074a2));
+  background-image: -webkit-linear-gradient(top, #278dbc, #0074a2);
+  background-image: -moz-linear-gradient(top, #278dbc, #0074a2);
+  background-image: -o-linear-gradient(top, #278dbc, #0074a2);
+  background-image: linear-gradient(top, #278dbc, #0074a2);
+  -webkit-box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.5);
+  box-shadow: inset 0 1px 0 rgba(120, 200, 230, 0.5); }
+  button:hover,
+  html input[type="button"]:hover,
+  input[type="reset"]:hover,
+  input[type="submit"]:hover, .button-primary:hover,
+  .button-secondary:hover {
+    color: #fff;
+    text-shadow: 0 -1px 0 #0074a2;
+    background-color: #0074a2;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#2ea2cc), to(#0074a2));
+    background-image: -webkit-linear-gradient(top, #2ea2cc, #0074a2);
+    background-image: -moz-linear-gradient(top, #2ea2cc, #0074a2);
+    background-image: -o-linear-gradient(top, #2ea2cc, #0074a2);
+    background-image: linear-gradient(top, #2ea2cc, #0074a2);
+    -webkit-box-shadow: inset 0 1px 0 #2ea2cc, inset 0 2px 0 rgba(120, 200, 230, 0.7);
+    box-shadow: inset 0 1px 0 #2ea2cc, inset 0 2px 0 rgba(120, 200, 230, 0.7); }
+  button:active,
+  html input[type="button"]:active,
+  input[type="reset"]:active,
+  input[type="submit"]:active, .button-primary:active,
+  .button-secondary:active {
+    color: rgba(255, 255, 255, 0.9);
+    background: #3089b0;
+    background-color: #0074a2;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#278dbc), to(#0074a2));
+    background-image: -webkit-linear-gradient(top, #278dbc, #0074a2);
+    background-image: -moz-linear-gradient(top, #278dbc, #0074a2);
+    background-image: -o-linear-gradient(top, #278dbc, #0074a2);
+    background-image: linear-gradient(top, #278dbc, #0074a2);
+    -webkit-box-shadow: inset 0 1px 5px #005684, inset 0 -1px 0 #278dbc;
+    box-shadow: inset 0 1px 5px #005684, inset 0 -1px 0 #278dbc; }
+
+button[disabled],
+input[disabled],
+input[disabled]:hover, .button-primary[disabled],
+.button-primary:disabled {
+  color: #94cde7;
+  background: #298cba;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
+.button-primary[disabled],
+.button-primary:disabled {
+  cursor: default; }
+
+.button-secondary {
+  color: #555;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+  background-color: #dddddd;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(#dddddd));
+  background-image: -webkit-linear-gradient(top, whitesmoke, #dddddd);
+  background-image: -moz-linear-gradient(top, whitesmoke, #dddddd);
+  background-image: -o-linear-gradient(top, whitesmoke, #dddddd);
+  background-image: linear-gradient(top, whitesmoke, #dddddd);
+  -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 -1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(255, 255, 255, 0.4), inset 0 -1px 1px rgba(0, 0, 0, 0.1); }
+  .button-secondary:hover {
+    color: #222;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+    background-color: #dddddd;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#dddddd));
+    background-image: -webkit-linear-gradient(top, white, #dddddd);
+    background-image: -moz-linear-gradient(top, white, #dddddd);
+    background-image: -o-linear-gradient(top, white, #dddddd);
+    background-image: linear-gradient(top, white, #dddddd);
+    -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(255, 255, 255, 0.5), inset 0 -1px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(255, 255, 255, 0.5), inset 0 -1px 1px rgba(0, 0, 0, 0.1); }
+  .button-secondary:active {
+    color: #555;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+    background-color: #dddddd;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(#dddddd));
+    background-image: -webkit-linear-gradient(top, whitesmoke, #dddddd);
+    background-image: -moz-linear-gradient(top, whitesmoke, #dddddd);
+    background-image: -o-linear-gradient(top, whitesmoke, #dddddd);
+    background-image: linear-gradient(top, whitesmoke, #dddddd);
+    -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.3), inset 0 -1px 0 rgba(255, 255, 255, 0.5);
+    box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.3), inset 0 -1px 0 rgba(255, 255, 255, 0.5); }
+
+.button-secondary[disabled],
+.button-secondary:disabled {
+  color: #999;
+  background: #e3e3e3;
+  cursor: default;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
 .nav-horizontal {
   text-align: center; }
   .nav-horizontal ul {
@@ -765,7 +879,8 @@ hr {
     position: fixed;
     top: 46px;
     left: 0;
-    bottom: 0; }
+    bottom: 0;
+    padding: 10px; }
 
   .nav-off-canvas,
   .content-wrapper {
@@ -851,7 +966,7 @@ hr {
   .wpcom--header--nav > ul ul {
     display: none;
     position: absolute;
-    top: 55px;
+    top: 45px;
     left: 0;
     width: auto;
     min-width: 220px;
@@ -968,14 +1083,13 @@ hr {
       display: none; } }
 .main {
   position: relative;
-  margin: 2.5% auto 0;
-  width: 95%;
+  margin: 61px auto 0;
+  padding: 0;
   min-width: 320px;
   max-width: 960px; }
 
 .sub {
-  height: 800px;
-  margin-bottom: 6%;
+  margin-bottom: 30px;
   padding: 0 20px 12px;
   background: #fff;
   overflow: hidden;
