--- a/scss/partials/buttons.scss
+++ b/scss/partials/buttons.scss
@@ -3,26 +3,43 @@
 // ==========================================================================
 
 %button {
-	padding: 0.6785714286em 1.3571428571em; // 9.5/14 19/14
-	font-size: 0.875em; // 14/16
+	padding: em(7,13) em(15,13);
+	font-size: em(13);
+	font-weight: 400;
+	line-height: 1;
 	color: #dcedf5;
-	border: 1px solid #0a3c59;
+	text-shadow: 0 -1px 0 rgba(0,116,162,0.8);
+	border: none;
 	background: #54b2de;
-	@include border-radius(4px);
+	cursor: pointer;
+	outline: none;
+	@include border-radius(3px);
+	@include gradient(#278dbc, #0074a2);
+	@include box-shadow(inset 0 1px 0 rgba(120,200,230,0.5));
 
-}
-%button-hover {
-	color: #fff;
-	background: #65c4f0;
-}
-%button-active {
-	color: #fff;
-	background: #3089b0;
+	&:hover {
+		color: #fff;
+		text-shadow: 0 -1px 0 rgb(0,116,162);
+		@include gradient(#2ea2cc, #0074a2);
+		@include box-shadow(
+			inset 0 1px 0 #2ea2cc,
+			inset 0 2px 0 rgba(120,200,230,0.7)
+		);
+	}
+	&:active {
+		color:rgba(255,255,255,.9);
+		background: #3089b0;
+		@include gradient(#278dbc, #0074a2);
+		@include box-shadow(
+			inset 0 1px 5px #005684,
+			inset 0 -1px 0 #278dbc
+		);
+	}
 }
 %button-disabled {
-	border: 1px solid #999;
-	color: #aaa;
-	background: #eee;
+	color: #94cde7;
+	background: #298cba;
+	@include box-shadow(none);
 }
 
 
@@ -36,18 +53,6 @@ input[type="reset"],
 input[type="submit"] {
 	@extend %button;
 }
-button:hover,
-html input[type="button"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:hover {
-	@extend %button-hover;
-}
-button:active,
-html input[type="button"]:active,
-input[type="reset"]:active,
-input[type="submit"]:active {
-	@extend %button-active;
-}
 // Disabled buttons
 button[disabled],
 input[disabled],
@@ -60,13 +65,52 @@ input[disabled]:hover {
 // Button classes
 // ==========================================================================
 
-.button,
-.button:visited {
+
+.button-primary,
+.button-secondary {
 	@extend %button;
 }
-.button:hover {
-	@extend %button-hover;
+.button-primary[disabled],
+// .button-primary.disabled, Maybe?
+.button-primary:disabled {
+	@extend %button-disabled;
+	cursor: default;
 }
-.button:active {
-	@extend %button-active;
+.button-secondary {
+	color: #555;
+	text-shadow: 0 1px 0 rgba(255,255,255,.7);
+	@include gradient(#f5f5f5, #ddd);
+	@include box-shadow(
+		inset 0 1px 0 rgba(0,0,0,.05),
+		inset 0 2px 0 rgba(255,255,255,.4),
+		inset 0 -1px 1px rgba(0,0,0,0.1)
+	);
+
+	&:hover {
+		color: #222;
+		text-shadow: 0 1px 0 rgba(255,255,255,.7);
+		@include gradient(#fff, #ddd);
+		@include box-shadow(
+			inset 0 1px 0 rgba(0,0,0,.05),
+			inset 0 2px 0 rgba(255,255,255,.5),
+			inset 0 -1px 1px rgba(0,0,0,0.1)
+		);
+	}
+	&:active {
+		color: #555;
+		text-shadow: 0 1px 0 rgba(255,255,255,.3);
+		@include gradient(#f5f5f5, #ddd);
+		@include box-shadow(
+			inset 0 1px 5px rgba(0,0,0,.3),
+			inset 0 -1px 0 rgba(255,255,255,.5)
+		);
+	}
+}
+.button-secondary[disabled],
+// .button-secondary.disabled, Maybe?
+.button-secondary:disabled {
+	color: #999;
+	background: #e3e3e3;
+	cursor: default;
+	@include box-shadow(none);
 }
