--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@ WordPress.com Styles
 @import "base"; // Style naked elements
 
 // Begin partials
-// @import "partials/buttons"; // Button styles
+@import "partials/buttons"; // Button styles
 // @import "partials/form"; // Form and input styles
 @import "partials/nav-horizontal"; // Horizontal navigation
 @import "partials/nav-off-canvas"; // Slide-in "hamburger" or drawer menu for small screens
