--- a/scss/partials/form.scss
+++ b/scss/partials/form.scss
@@ -2,81 +2,63 @@
 // form styles. By default, the global styles are on.
 
 %form {
-    max-width: 600px;
-    padding: 20px;
-    background: #e4eff5;
-    border: 1px solid #95a1ae;
-    @include border-radius(3px);
-
-    ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
+	ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
 }
 
 %form-field {
-    margin-bottom: 20px;
-    padding: 8px;
-    color: #a6b7c0;
-    background: #f3f6f8;
-    border: 1px solid #a6b7c0;
-    @include border-radius(3px);
-    @include box-shadow(rgba(255,255,255,0.4) 0 1px 0, inset rgba(000,000,000,0.7) 0 0px 0px);
-}
+	// margin-bottom: 20px;
+	margin: 0;
+	padding: 10px 12px;
+	width: 100%;
+	color: #555;
+	font-size: 15px;
+	line-height: 1.4;
+	border: 1px solid #dfdfdf;
+	background: #f9f9f9;
+	@include transition(all .2s ease-in-out);
+	@include placeholder(){
+		color: #aaa;
+	};
 
-%input {
-    &.input-wide {
-        width: 100%;
-    }
+	&:hover {
+		border-color: #aaa;
+		background: #fff;
+		@include placeholder{
+			color: #888;
+		};
+	}
+	&:focus {
+		color: #5c6671;
+		border-color: #1e8cbe;
+		background: #fff;
+		outline: none;
+		@include box-shadow(inset 0 1px 4px 0 rgba(0, 0, 0, 0.3));
+		@include placeholder{
+			color: #888;
+		};
+	}
 }
-
-%form-field-focus {
-    color: #5c6671;
-    background: #fff;
-    outline: none;
-}
-
 %textarea {
-    width: 100%;
+	min-height: em(84,15);
 }
-
 
 // ==========================================================================
 // Global form elements
 // ==========================================================================
 
 form {
-    @extend %form;
+	@extend %form;
 }
 input[type="text"],
+input[type="email"],
+input[type="password"],
 textarea {
-    @extend %form-field;
-}
-input {
-    @extend %input;
-}
-input[type="text"]:focus,
-textarea:focus {
-    @extend %form-field-focus;
+	@extend %form-field;
 }
 textarea {
-    @extend %textarea;
+	@extend %textarea;
 }
-
-// ==========================================================================
-// Classy form elements
-// ==========================================================================
-
-// .form-container {
-//     @extend %form
-// }
-// .form-field {
-//     @extend %form-field;
-// }
-// textarea.form-field {
-//    @extend %textarea;
-// }
-// .form-field:focus {
-//     @extend %form-field-focus;
-// }
