--- a/scss/variables/typography.scss
+++ b/scss/variables/typography.scss
@@ -11,7 +11,8 @@ $bold: 700; // For example, bold could change to 400;
 $monospace: 'courier new', monospace;
 $serif: Georgia, "Times New Roman", Times, serif;
 $sans: Helvetica, Arial, sans-serif;
-$open-sans: 'Open Sans', $sans; // 400 400i 700 700i
+$open-sans: 'Open Sans', $sans; // 300 400 400i 700 700i
+$merriweather: 'Merriweather', $serif; // 900 700
 
 // Icons
 $genericons: 'Genericons', Arial, sans-serif;
