--- a/scss/icons/icons.scss
+++ b/scss/icons/icons.scss
@@ -14,7 +14,7 @@
 	}
 }
 
-.wpcom--logo {
+.wpcom_logo {
 	$size: 32px;
 
 	display: inline-block;
@@ -38,7 +38,7 @@
 	}
 }
 // If you want to reuse/resize do something like:
-// .foo.wpcom--logo {
+// .foo.wpcom_logo {
 // 	$size: 50px;
 
 // 	color: $base-lighter-blue;
