Added alert colors.

--- a/scss/variables/colors.scss
+++ b/scss/variables/colors.scss
@@ -21,3 +21,8 @@ $light-grey: #f1f1f1;
 $gravy-grey: #e5e5e5;
 $shadow-grey: #dfdfdf;
 $coal-grey: #464646;
+
+// Validation and Alerts
+$alert-red: #dd3d36;
+$alert-green: #4cb420;
+$alert-yellow: #ffba00;
